versioned_docs/version-2.20/reference/targets/vcs_version.mdx
---
title: vcs_version
description: |
  Generates a version string from VCS state.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generates a version string from VCS state.

Uses a constrained but useful subset of the full functionality of setuptools_scm (https://github.com/pypa/setuptools_scm). These constraints avoid pitfalls in the interaction of setuptools_scm with Pants&#x27;s hermetic environments.

In particular, we ignore any existing setuptools_scm config. Instead you must provide a subset of that config in this target&#x27;s fields.

If you need functionality that is not currently exposed here, please reach out to us at https://www.pantsbuild.org/v2.20/docs/getting-help.

Backend: <span className="color--primary">`pants.backend.experimental.python`</span>

---

<span className={styles.options}>

## `generate_to`

<Field
    type_repr={`str`}
>

Generate the version data to this relative path, using the template field.

Note that the generated output will not be written to disk in the source tree, but will be available as a generated dependency to code that depends on this target.

</Field>

## `template`

<Field
    type_repr={`str`}
>

Generate the version data using this format string, which takes a version format kwarg.

E.g., `'version = "{version}"'`

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `local_scheme`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The local scheme to configure `setuptools_scm` to use. See https://setuptools-scm.readthedocs.io/en/latest/extending/#available-implementations_1

</Field>

## `python_resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.python"
>

The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.

</Field>

## `tag_regex`

<Field
    type_repr={`str | None`}
    default_repr={`'^(?:[\\w-]+-)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$'`}
>

A Python regex string to extract the version string from a VCS tag.

The regex needs to contain either a single match group, or a group named version, that captures the actual version information.

Note that this is unrelated to the tags field and Pants&#x27;s own tags concept.

See https://github.com/pypa/setuptools_scm for implementation details.

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `version_scheme`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The version scheme to configure `setuptools_scm` to use. See https://setuptools-scm.readthedocs.io/en/latest/extending/#available-implementations

</Field>

</span>
